# semleaf

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  package-lock.json
.github/workflows/: lint.yml  test.yml
backend/: Cargo.toml
backend/migrations/: 20250210000001_init.sql  20250211000001_multiple_meanings.sql
backend/src/: error.rs  lib.rs  main.rs  state.rs
backend/src/auth/: middleware.rs  mod.rs
backend/src/models/: mod.rs  phrase.rs
backend/src/routes/: export.rs  mod.rs  phrases.rs  search.rs
backend/src/services/: db.rs  embedding.rs  mod.rs
backend/tests/: api_auth_test.rs  api_export_test.rs  api_phrases_test.rs  api_search_test.rs
backend/tests/common/: mod.rs
design/: design.md  draft.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  navigation.spec.ts  phrases.spec.ts  search.spec.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  types.ts
frontend/src/components/: Layout.test.tsx  Layout.tsx  PhraseCard.test.tsx  PhraseCard.tsx  PhraseFormModal.test.tsx  PhraseFormModal.tsx  PhraseTable.test.tsx  PhraseTable.tsx  SearchBox.test.tsx  SearchBox.tsx  Sidebar.tsx  TagInput.test.tsx  TagInput.tsx
frontend/src/pages/: Home.test.tsx  Home.tsx  Login.test.tsx  Login.tsx  PhraseDetail.test.tsx  PhraseDetail.tsx  PhraseForm.test.tsx  PhraseForm.tsx  SearchResults.test.tsx  SearchResults.tsx
frontend/src/test/: helpers.ts  setup.ts
